<resources>
    <string name="app_name">Go4Lunch</string>

    <string name="how_many_workmates">How many workmates go to this restaurant.</string>
    <string name="restaurant_photo">The restaurant\'s photo</string>
    <string name="workmate_photo">The workmate photo</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="restaurant_favorite">Add restaurant to favorite</string>
    <string name="user_photo">user photo</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
</resources>